8198928: (so) SocketChannel connect may deadlock if closed at around same time that connect fails

Reviewed-by: bpb, mli